--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <li><strong>Opt-Out:</strong> Opt out of the sale of personal information (note: we do not sell your data).</li>
         <li><strong>Restrict Processing:</strong> Request restrictions on how we process your data.</li>
     </ul>
-    <p>To exercise these rights, contact us at [Insert Contact Email]. We will respond within the timeframes required by law (e.g., 30 days under GDPR).</p>
+    <p>To exercise these rights, contact us at gurvinderp84@gmail.com. We will respond within the timeframes required by law (e.g., 30 days under GDPR).</p>
 
     <h2>8. Third-Party Links</h2>
     <p>The App may contain links to third-party websites or services. We are not responsible for their privacy practices. Please review their privacy policies before interacting with them.</p>
@@ -76,10 +76,10 @@
 
     <h2>11. Contact Us</h2>
     <p>If you have questions or concerns about this Privacy Policy, please contact us at:</p>
-    <p>Email: [Insert Contact Email]<br>
-    Address: [Insert Business Address, if applicable]</p>
+    <p>Email: gurvinderp84@gmail.com<br>
+    Address: Toronto, Canada</p>
     <p>For California residents, you may also contact us to exercise your CCPA rights, including the “Do Not Sell My Personal Information” request.</p>
 
-    <p>This Privacy Policy is hosted at [Insert Hosted URL] and linked in the Nitnem Tracker App for easy access.</p>
+    <p>This Privacy Policy is hosted at https://gurvindersingh9803.github.io/NitnemTrackerPrivacyPolicy/ and linked in the Nitnem Tracker App for easy access.</p>
 </body>
 </html>
